--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -19,5 +19,8 @@
 @import 'blocks/btns';
 @import 'blocks/sidepanel';
 @import 'blocks/menu';
+@import 'blocks/about';
+@import 'blocks/whatuse';
+@import 'blocks/works';
 
 @import 'base/media';
