--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -2,13 +2,16 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 60px;
-    &_fs16 {
+    &_fs14 {
         font-size: 14px;
         line-height: 21px;
     }
     &_fs16 {
         font-size: 16px;
         line-height: 24px;
+    }
+    &_fs36 {
+        font-size: 36px;
     }
     &_fs48 {
         font-size: 48px;
