--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -22,5 +22,7 @@
 @import 'blocks/about';
 @import 'blocks/whatuse';
 @import 'blocks/works';
+@import 'blocks/pricelist';
+@import 'blocks/resume';
 
 @import 'base/media';
