--- a/src/sass/blocks/_whatuse.scss
+++ b/src/sass/blocks/_whatuse.scss
@@ -40,4 +40,45 @@
             font-size: 12px;
         }
     }
+    .expirience {
+        margin-top: 120px;
+        display: grid;
+        grid-template-columns: repeat(3, 350px);
+        grid-template-rows: repeat(2, 70px);
+        column-gap: 45px;
+        row-gap: 30px;
+        &__item {
+           width: 350px;
+           height: 70px;
+           display: flex;
+           justify-content: space-between;
+           flex-direction: column;
+           &-head {
+            padding-top: 9px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-left: 14px;
+            position: relative;
+            @include before_circle;
+                &:before {
+                    top: 4%;
+                }
+            }
+            .percent {
+                font-size: 14px;
+            }
+            .scale {
+                width: 100%;
+                height: 15px;
+                background-color: #E8E4DE;
+                border-radius: 5px;
+                &__fill {
+                    height: 100%;
+                    background-color: $main-color;
+                    border-radius: 5px;
+                }
+            }
+        }
+    }
 }
