--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -24,5 +24,6 @@
 @import 'blocks/works';
 @import 'blocks/pricelist';
 @import 'blocks/resume';
+@import 'blocks/contacts';
 
 @import 'base/media';
